commit -u "add Diary section to requirement of EmpathicEngine"

--- a/ProjectFiles/Requirements/Requirements.tex
+++ b/ProjectFiles/Requirements/Requirements.tex
@@ -1,22 +1,25 @@
 \documentclass{article}
 \begin{document}
-\title{First Article}
+
+\title{Requirement of EmpathicEngine}
 \author{Zhuang Chang}
 \date{\today}
+
 \maketitle
+
 \begin{abstract}
 this document gives a clear idea how to use latex in windows 
 to prepare the articles
 \end{abstract}
+
 \tableofcontents
 
+\section{Diary}
+Abstract is a vital mind in program design.
+Reading code and making best use of rules in programming language
+help improve feel about coding.
 \section{Introduction}
-As the competition of the manufacturing industry
- is increasing throughout the world, many companies tend to 
-improve product quality, reduce product development cost and shorten 
-time of design-to-assembly for new products. Assembly processes constitute 
-a majority of the cost of a product (Boothroyd and Dewhurst 1989). In the assembly planning process, assembly sequences which are the backbone of assembly plans are generated and assembly operations which describe how different parts will be assembled together are formalised. Production efficiency will be improved and a large amount of cost will be reduced if a product is assembled according to a well-planned assembly sequence.
-Traditionally, assembly sequence planning has been conducted by either product designers or production engineers manually using either 2D drawings or physical prototypes of the product based on their intuition and experience.Nowadays, since products have become increasingly complex and the number of components has increased exponentially, manual assembly sequence planning has become impractical. In addition, physical prototyping is time-consuming and expensive for users to verify the ease of assembly. Moreover, additional cost will be incurred if there is any design.
+
 \section{Insert Section}
 This is to insert sections in between.here indexing automatically cahnges
 
