commit -u "Add file content"

--- a/ProjectFiles/ConceptDesign/ConceptDesign.tex
+++ b/ProjectFiles/ConceptDesign/ConceptDesign.tex
@@ -13,4 +13,9 @@ this document collects the requiremnts of Empathic engine
 \section{Introduction}
 Empathy is sharing what you see, what you hear and what you
 feel.
+\section{Framework}
+wampserver is a simple Web server and can be used
+to provide Mysql database, Apache web server and PhP
+interpreter.
+
 \end{document}
