--- a/ProjectFiles/Requirements/Requirements.tex
+++ b/ProjectFiles/Requirements/Requirements.tex
@@ -14,10 +14,11 @@ to prepare the articles
 
 \tableofcontents
 
-\section{Diary}
-Abstract is a vital mind in program design.
-Reading code and making best use of rules in programming language
-help improve feel about coding.
+\section{Remote Collboartion}
+\subsection{Information Share}
+\subsubsection{Share Video}
+\subsubsection{Share gesture}
+\subsection{Interaction}
 \section{Introduction}
 
 \section{Insert Section}
