commit -u "Upadated Latex Files"

--- a/ProjectFiles/DevelopDiary/DevDiary.tex
+++ b/ProjectFiles/DevelopDiary/DevDiary.tex
@@ -9,26 +9,75 @@
 
 
 \tableofcontents
+\section{Backlog}
+\paragraph{Collaboration Type}
+
+
+Relationship between human and agent in human-computer collaboration \cite{EmpathyConcept}.
+
+whether set collaborative task in virtual reality can improve empathy?
+
+Adjust physical and physiological state to colloboratively finish a task and
+feel oneself's state to infer other's state. This can be used for psycological 
+trainning where a healthy people can help psychological disabled one to 
+feel the normal inner state.
+
+
+human adjust their physical or physiological signal to reach a level and computer
+will change volume or picture color
+
+Observer and target.
+
+Agent can manipulate (augment or depress) elements from the computer side to 
+change focus to create new meaning of current job.
+
+In MR based collaborative environment, we research empathy between or among 
+follolwing objects:
+\begin{enumerate}
+\item[1] human-human
+\item[2] human-Agent
+\item[3] agent-human
+\item[4] agent-Agent
+\item[5] human-agent-human
+\item[6] agent-human-human
+\item[7] agent-human group
+\item[8] human-agent group
+\item[9] huamn group-agent group     
+\end{enumerate}
+
 
 \section{PhD Research Plan}
 \subsection{Summary}
 \paragraph{}
 Construct an engine to support most mixed
 reality (MR) related scientific research.
-\paragraph{}
+
 Agent in MR environment help enhance understand and 
 feeling of social presence.
+
 \paragraph{MR content}
 3D model will be placed on the web server.
+
 \paragraph{Interaction}
 Interaction depends intensively on terminal devices
+
 \paragraph{Display}
 Display is also constrained by terminal devices.
+
 \paragraph{AI}
 Integrate artificial intelligence to construct Agent
 that can sense, express and regulate emotion
-\subparagraph{Datasource}
-Data comprises physical and physiological signals.
+
+    \subparagraph{Datasource}
+    Data comprises physical and physiological signals.
+    \begin{enumerate}
+    \item[1)]
+    physical signals includes images, voices and so on.
+    \item[2)]
+    Physiological signals comprises Electroencephlogram(EEG), Electrocardiogram
+    (ECG), etc..
+    \end{enumerate}
+
 
 
 
@@ -46,5 +95,6 @@ Data comprises physical and physiological signals.
 
 
 
-
+\bibliographystyle{unsrt}
+\bibliography{References}
 \end{document}
