--- a/ProjectFiles/ConceptDesign/ConceptDesign.tex
+++ b/ProjectFiles/ConceptDesign/ConceptDesign.tex
@@ -14,8 +14,16 @@ this document collects the requiremnts of Empathic engine
 Empathy is sharing what you see, what you hear and what you
 feel.
 \section{Framework}
+\subsection{Server}
 wampserver is a simple Web server and can be used
 to provide Mysql database, Apache web server and PhP
 interpreter.
+
+EmpathicEngine is a socket based server.
+\subsection{Client}
+
+\section{Artificial Intelligence}
+
+
 
 \end{document}
