commit -u "added macros into DBMysql.h"

--- a/ProjectFiles/ConceptDesign/ConceptDesign.tex
+++ b/ProjectFiles/ConceptDesign/ConceptDesign.tex
@@ -22,8 +22,8 @@ interpreter.
 EmpathicEngine is a socket based server.
 \subsection{Client}
 
-\section{Artificial Intelligence}
+\subsection{Artificial Intelligence}
 
-
+\subsection{Content render}
 
 \end{document}
