commit -u "add FileProcess.h and revised server.h to configure port by setup.ini"

--- a/ProjectFiles/ConceptDesign/ConceptDesign.tex
+++ b/ProjectFiles/ConceptDesign/ConceptDesign.tex
@@ -1,6 +1,8 @@
 \documentclass{article}
+\usepackage{indentfirst}
+
 \begin{document}
-\title{Requirements for Empathic Engine}
+\title{ConceptDesign for Empathic Engine}
 \author{Zhuang Chang}
 \date{\today}
 \maketitle
@@ -15,15 +17,37 @@ Empathy is sharing what you see, what you hear and what you
 feel.
 \section{Framework}
 \subsection{Server}
-wampserver is a simple Web server and can be used
+
+wampserver is a simple Web server and can be  used
 to provide Mysql database, Apache web server and PhP
 interpreter.
 
 EmpathicEngine is a socket based server.
+
+share information
 \subsection{Client}
+AgentClient, AngentFactory
+Robot/invisible Agent
 
-\subsection{Artificial Intelligence}
-
+other types of clients controlled by human
 \subsection{Content render}
+
+\subsection{Database}
+\section{Functions}
+\subsection{Share Information}
+\begin{enumerate}
+    \item [1)]share gameobject's postion, rotation and scale
+    \item [2)]share video stream among MR clients
+    \item [3)]share voice or vocal clips
+\end{enumerate}
+Emojii pictures
+
+music/voice clips
+
+code controlled animation
+
+AI networks
+
+models and materials
 
 \end{document}
