--- a/ProjectFiles/DevelopDiary/References.bib
+++ b/ProjectFiles/DevelopDiary/References.bib
@@ -8,3 +8,14 @@
   year={2006},
   publisher={Elsevier}
 }
+
+@article{preston2002empathy,
+  title={Empathy: Its ultimate and proximate bases},
+  author={Preston, Stephanie D and De Waal, Frans BM},
+  journal={Behavioral and brain sciences},
+  volume={25},
+  number={1},
+  pages={1--20},
+  year={2002},
+  publisher={Cambridge University Press}
+}
