commit on master

--- a/ProjectFiles/DevelopDiary/DevDiary.tex
+++ b/ProjectFiles/DevelopDiary/DevDiary.tex
@@ -32,15 +32,17 @@ Theory of emotion and affective computing
     enhance humanbeings' ability of empathy? Whether agent modulating collaboration inforamtion actively can help imporve understanding?
     \item[2.2]Maybe in other situations it inhibits collaboration and might become intrusive.
  
-\end{enumerate} 
+\end{enumerate}
 
 \item[3]How can agent generate empathic representation properly?
 \begin{enumerate}
-    \item[2.1]Emotion theory
-    \item[2.2]Data processing methods 
-    \item[2.2]evaluation criteria or methods
+    \item[3.1]Emotion theory
+    \item[3.2]Data processing methods 
+    \item[3.2]evaluation criteria or methods
  
 \end{enumerate} 
+
+\item[4]How to calculate empathy quantitively?
 
 
 \end{enumerate}
