commit on master

--- a/ProjectFiles/ConceptDesign/ConceptDesign.tex
+++ b/ProjectFiles/ConceptDesign/ConceptDesign.tex
@@ -24,7 +24,15 @@ interpreter.
 
 EmpathicEngine is a socket based server.
 
-share information
+
+Server->send
+point to point 
+broadcast
+
+Byteconverter input should be class, int, float, double and so on. Output sholud be char array.
+0 data type
+1 data length
+2 data value
 \subsection{Client}
 AgentClient, AngentFactory
 Robot/invisible Agent
