--- a/ProjectFiles/DevelopDiary/DevDiary.tex
+++ b/ProjectFiles/DevelopDiary/DevDiary.tex
@@ -14,14 +14,33 @@
 \paragraph{Scientific Problems}
 
 Definition of agent, software agent, hardware agent
-Definition of empathy
+
+Definition of empathy:
+
+Seeing with the eyes of another, listening with the ears the another and feeling with 
+the heart of another.
+
+
 Theory of emotion and affective computing
+
+
+
+
 
 \begin{enumerate}
 \item[1] relationship between human and agent in collaborative MR system
 \begin{enumerate}
     \item[1.1]whether setting collaborative task in virtual reality can improve empathy? 
-    \item[1.2]when and how could agent help improve understanding between two collaborators?
+    
+    Teacher demonstrates knowledge to students is a kind of collaboration.
+    
+    Two people collaborate on keeping a ball on a rod is another type of collaboration task that 
+    might help improve understanding of each other.
+
+    \item[1.2] when and how could agent help improve understanding between two collaborators?
+
+    Human plays the role of observer while the agent takes the role of target
+
     \item[1.3] How does social realtionship influence empathy between collaborators?
  
 \end{enumerate} 
@@ -138,8 +157,16 @@ the observer's state can be influenced.
     \item[3)] 
      
 \end{enumerate}
+\section{20201123}
+ThinkPhp is kind of framework for database Interaction facilitated at server side. For user side Html, CSS and Js are some common techniques for constructing web pages connected to database.
 
+create an agent that can recognize virtual humanbeing's face emotion in VR
 
+webpage can be helpful for database management, thus a database is necessary first.
+
+methodology is design hunman computer interactive systems and use behaviour statistics mathmetical methods to validate the usability.
+
+behaviour of statistics is important for this way and SPSS will be helpful for data analysing.
 
 
 \bibliographystyle{unsrt}
